--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,83 +3,102 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inicio</title>
+	<link rel="stylesheet" href="/css/index.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="/servlets">Inicio</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
-			    	<li class="nav-item active">
-			        	<a class="nav-link" href="/servlets/altas">Altas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
-			      	</li>
-			      	<li class="nav-item">
-			        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
-			      	</li>
-			    </ul>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
+			<div class="container">
+				<a class="navbar-brand" href="/servlets">Inicio</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav" style="padding-left: 1em;">
+					<ul class="navbar-nav">
+				    	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/altas">Altas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/bajas">Bajas</a>
+				      	</li>
+				      	<li class="nav-item">
+				        	<a class="nav-link" href="/servlets/cambios">Modificacion</a>
+				      	</li>
+				    </ul>
+				</div>
 			</div>
 		</nav>
 	</header>
 	<main>
-		<section id="about">
-			<h1>Guarderia Perruna</h1>	
-			<p>Somos un par de estudiantes que se dedicaron a realizar un apartado para que nosotros podamos cuidar a tu perro.</p>
-			<p>Es muy dificil salir y no saber que hacer para cuidar a tu perrito.</p>
-			<p>Nosotros somos tu solucion para cuidarlo de manera correcta.</p>
-			<br><br><br><br>
-			<hr>
+		<section id="about" class="w-100 bg-primary container-fluid" style="padding-bottom: 10em; padding-top: 10em;">
+			<div class="p-5">
+				<h1 class="container display-1 text-center">Guarderia Perruna</h1>	
+			</div>
+			<div class="container">
+				<blockquote class="blockquote">
+					<p class="mb-0 text-center h2">Somos un par de estudiantes que se dedicaron a realizar un apartado para que nosotros podamos cuidar a tu perro</p>
+					<p class="mb-0 text-center h2">Es muy dificil salir y no saber que hacer para cuidar a tu perrito</p>
+					<p class="mb-0 text-center h2">Nosotros somos tu solucion para cuidarlo de manera correcta</p>
+					<br>
+				</blockquote>
+			</div>
 		</section>
-		<section id="aboutAltas">
-			<h2>Registralo con nosotros</h2>
-			<p>Registra a tu perro con nosotros</p>
-			<p>Lo cuidaremos como no tienes idea</p>
-			<p>Solo necesitas ir a nuestro formulario para registrarlo, usando el boton de abajo</p>
-			<br><br><br><br>
-			<a href="/servlets/altas">
-				<button type="button">Registrar</button>
-			</a>
-			<br>
-			<hr>
-			<br>
+		<section id="aboutAltas" class="container-fluid">
+			<div class="container text-center" style="padding-top: 8em; padding-bottom: 8em;">
+				<div>
+					<h2 class="display-4" style="padding-bottom: 0.8em;">Registralo con nosotros</h2>
+					<div class="h3">
+						<p>Registra a tu perro con nosotros</p>
+						<p>Lo cuidaremos como no tienes idea</p>
+						<p>Solo necesitas ir a nuestro formulario para registrarlo, usando el boton de abajo</p>
+					</div>
+				</div>
+				<div style="padding-top: 4em;">
+					<a href="/servlets/altas">
+						<button type="button" class="btn btn-secondary btn-lg btn-block">Registrar</button>
+					</a>
+				</div>
+			</div>
 		</section>
-		<section id="aboutBajas">
-			<h2>Decir adios :(</h2>
-			<p>Que mal que se quiera ir</p>
-			<p>No se preocupe, esperemos que haya tenido la mejor estancia con nosotros y hayamos sido de mucha ayuda</p>
-			<p>Use el boton para poder decirnos adios :(</p>
-			<br><br><br><br>
-			<a href="/servlets/bajas">
-				<button type="button">Eliminar :(</button>
-			</a>
-			<br>
-			<hr>
-			<br>
+		<section id="aboutBajas" class="container-fluid bg-info">
+			<div class="container text-center" style="padding-top: 12em; padding-bottom: 12em;">
+				<div>
+					<h2  class="display-4" style="padding-bottom: 0.8em;">Decir adios :(</h2>
+					<div class="h3">
+						<p>Que mal que se quiera ir</p>
+						<p>No se preocupe, esperemos que haya tenido la mejor estancia con nosotros y hayamos sido de mucha ayuda</p>
+						<p>Use el boton para poder decirnos adios :(</p>
+					</div>
+				</div>
+				<div style="padding-top: 4em;">
+					<a href="/servlets/bajas">
+						<button type="button" class="btn btn-light btn-lg btn-block">Eliminar :(</button>
+					</a>
+				</div>
+			</div>
 		</section>
-		<section id="aboutModificaciones">
-			<h2>¿Lo registraste mal?</h2>
-			<p>No pasa nada, todo con calma</p>
-			<p>Si has registrado mal a tu perro o un dato tiene que ser actualizado</p>
-			<p>Puedes arreglarlo con un click en el boton de abajo</p>
-			<br><br><br><br>
-			<a href="/servlets/cambios">
-				<button type="button">Actualizar</button>
-			</a>
-			<br>
-			<hr>
-			<br>
+		<section id="aboutModificaciones" class="container-fluid bg-light bg-gradient">
+			<div class="container text-center" style="padding-top: 12em; padding-bottom: 12em;">
+				<div>
+					<h2 class="display-4" style="padding-bottom: 0.8em;">¿Lo registraste mal?</h2>
+					<div class="h3">
+						<p>No pasa nada, todo con calma</p>
+						<p>Si has registrado mal a tu perro o un dato tiene que ser actualizado</p>
+						<p>Puedes arreglarlo con un click en el boton de abajo</p>
+					</div>
+				</div>
+				<div style="padding-top: 4em;">
+					<a href="/servlets/cambios">
+						<button type="button" class="btn btn-primary btn-lg btn-block">Actualizar</button>
+					</a>
+				</div>
+			</div>
 		</section>
 	</main>
-	<footer>
+	<footer class="text-center bg-secondary" style="padding: 1em; position: relative; width: 100%; bottom: 0;">
 		<div id="rightsReserved">
-			<hr>
-			Copyright&copy; 2023 - Página creada por Guy e Ikari - Todos los derechos reservados
+			Copyright&copy; 2023 - Aplicacion creada por Ikari y Guy - Todos los derechos reservados
 		</div>
 	</footer>
 </body>
